# syn-with-comments

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: safety.yml  scheduled.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_tests.rs
lib/: Cargo.toml
lib/src/: lib.rs
