[workspace]

members = ["lib", "cli"]

[workspace.package]
authors = ["Kraktus"]
description = "Preserve comments when parsing rust code with `syn`"
documentation = "https://docs.rs/syn-with-comments"
edition = "2021"
keywords = ["rustfmt"]
license = "AGPL-3.0+"
repository = "https://github.com/kraktus/syn-with-comments"
version = "0.1.0-dev"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false, features = [
  "span-locations",
] }
syn = { version = "1.0.90", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "visit",
  "visit-mut",
  "derive",
  "clone-impls",
  "extra-traits",
] }
quote = "1"
prettyplease = "0.1.22"
pretty_assertions = "1.3"