[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "syn-with-comments-cli"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

[dev-dependencies]
