[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "syn-with-comments-cli"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pretty_assertions.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
syn-with-comments = { path = "../lib", default-features = false }
syn.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
