[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "syn-with-comments"
repository.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
proc-macro2.workspace = true
syn.workspace = true

[dev-dependencies]
